Tambah span dan br
span tahun ajaran 2023
span profil mahasiswa
br pada penutup span program studi

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div>
+        <span>Profil Mahasiswa</span><br>
         <span>Nama Saya Reksi Maulana</span><br>
         <span>Mahasiswa Universitas Sains dan Teknologi Komputer</span><br>
         <span>Fakultas Studi Akademik</span><br>
-        <span>Program Studi Teknik Informatika</span>
+        <span>Program Studi Teknik Informatika</span><br>
+        <span>Tahun Ajaran 2023</span><br>
     </div>
 </body>
 </html>
